hello-deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-deployment
  name: hello-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-deployment
      run: hello-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: hello-deployment
        run: hello-deployment
    spec:
      containers:
        - image: nginx
          name: nginx
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.5"
            limits:
              memory: "200Mi"
              cpu: "1"
          ports:
            - containerPort: 80
        - image: busybox
          name: logger
          args:
            [
              "/bin/sh",
              "-c",
              'i=0; while true; do echo "$i: $(date)" > /var/log/logger/$(date +%Y%m%d%H%M%S); i=$((i+1)); sleep 60; done',
            ]
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.5"
            limits:
              memory: "200Mi"
              cpu: "1"
          volumeMounts:
            - mountPath: /var/log/logger/
              name: log
      volumes:
        - name: log
          persistentVolumeClaim:
            claimName: hello-deployment-volume-claim
