hello-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-deployment-service
spec:
  selector:
    run: hello-deployment
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: NodePort
