hello-deployment/ingress-controller.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-hello-ingress
  namespace: hello-deployment
  labels:
    name: sandbox-hello-ingress
spec:
  rules:
    - host: web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-deployment-service
                port:
                  number: 80
